[package]

name = "cargopants"
version = "0.0.1"
authors = ["softprops <d.tangren@gmail.com>"]
description = "A client interface got cratesio."
documentation = "https://github.com/softprops/cargopants#readme"
homepage = "https://github.com/softprops/cargopants"
repository = "https://github.com/softprops/cargopants"
keywords = ["crates", "crates.io"]
license = "MIT"

[dependencies]
hyper = "0.4.0"
mime = "0.0.11"
rustc-serialize = "0.3.14"

[[bin]]
name = "cargopants"
doc = false